--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html lang="ja">
 
+<head>
+  <meta charset="utf-8" />
+  <meta property="og:title" content="トップページ | JavaScript-Community" />
+  <meta property="og:description" content="JavaScriptがいっぱい" />
+  <title>Run-Lan トップ画面</title>
+  <link rel="stylesheet" href="./styles/common.css" />
+  <link rel="stylesheet" href="./styles/index.css" />
+</head>
+
+<body>
+  <div class="header">
+    <div class="header-logo">JavaScript-Community</div>
+    <div class="header-list">
+      <ul>
+        <li><a href="./">Top</a></li>
+        <li><a href="JavaScript-Communityとは">JavaScript-Communityとは</a></li>
+        <li><a href="https://scrapbox.io/mikan-room">他サイト</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="main">
+    <div class="copy-container">
+    </div>
+
+    <div class="contents">
+      <h3 class="section-title">ページ一覧</h3>
+      <ul class="content-item">
+        <li>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="footer">
+    <div class="footer-logo">JavaScript-Community</div>
+  </div>
+</body>
+
+</html>
