--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
     <div class="header-logo">JavaScript-Community</div>
     <div class="header-list">
       <ul>
-        <li><a href="./">Top</a></li>
-        <li><a href="JavaScript-Communityとは">JavaScript-Communityとは</a></li>
-        <li><a href="https://scrapbox.io/mikan-room">他サイト</a></li>
+        <li><input name="title" /></li>
       </ul>
     </div>
   </div>
